--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,6 @@
 body{
-    font-family: 'open-sans', sans-serif;
-    font-size: 100%;
+    font-family: 'Lato', sans-serif;
+    font-size: 105%;
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -370,16 +370,10 @@ a{
 
 /* JABARDASTI: uncomment hover, comment jabardasti */
 
-/* a.navlink:hover{
+a.navlink:hover{
     color: white;
     background-color: #00838f;
     border-color: #00838f;
-} */
-
-.jabardasti{
-    color: white !important;
-    background-color: #00838f !important;
-    border-color: #00838f !important;
 }
 
 a.navlink:active{
@@ -506,6 +500,7 @@ a.navlink:active{
     max-width: 200px;
     width: 30%;
     margin-right: 12%;
+    box-shadow: 0 0 15px 1px rgba(37, 37, 37, 0.561);
 }
 
 /* .textwithimg{
@@ -570,12 +565,78 @@ li.pin{
     background-image: url(../img/color.jpg);
 }
 
+.connect{
+    background-color: white;
+    background-image: url(../img/undraw-connect.svg);
+    background-size: contain;
+    background-attachment: local;
+    background-position-x: -5rem;
+    background-position-y: -3rem;
+}
+
+.background-fade{
+    border-radius: 1rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 12px 15px rgba(255, 255, 255, 0.5);
+}
+
 @media screen and (max-width: 810px){
     .textsection{
         padding: 50px 12% !important;
     }
 }
 
+.contacticons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.contacticons i{
+    margin: 10px;
+    font-size: 2.5rem;
+    color: #555555;
+}
+
+.fa-sticky-note:hover{
+    color: #00838f;
+}
+
+.fa-linkedin:hover{
+    color: #0077B5;
+}
+
+.fa-facebook:hover{
+    background: linear-gradient(
+        to bottom,
+        #18affe,
+        #139ff7,
+        #1197f6,
+        #0b86ed,
+        #0476e6,
+        #0168e1,
+        #0064e0,
+        #0062e1,
+        #075cd9
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.fa-envelope:hover{
+    color: #e91e63;
+}
+
+.fa-github:hover{
+    color: black;
+}
+
+#typeform-parent{
+    display: none;
+    padding-top: 0px;
+    padding-bottom: 60px; 
+}
 /* SLIDESHOW */
 
 .slidepic{
