--- a/css/css.css
+++ b/css/css.css
@@ -738,6 +738,13 @@ li.pin {
     box-sizing: border-box;
 }
 
+.sketch-holder {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .with-sketch p {
     padding: 0 20%;
     box-sizing: border-box;
