--- a/css/css.css
+++ b/css/css.css
@@ -1039,6 +1039,15 @@ label {
 
 /* FOOTER */
 
+#footer-animation {
+    width: 100%;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
 .footer {
     background-color: #555555 !important;
     display: flex;
