--- a/css/css.css
+++ b/css/css.css
@@ -757,6 +757,50 @@ li.pin {
     }
 }
 
+/* 404 PAGE */
+.push-down {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.div-404{
+    display: flex;
+    flex-direction: row;
+    justify-content: safe;
+    padding: 50px 12% !important;
+    align-items: center;
+    align-content: center;
+    flex-grow: 1;
+}
+
+.img-404{
+    width: 65%;
+    max-width: 600px;
+    margin-right: 20px !important;
+
+}
+
+.text-404 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+.content-404 {
+    text-align: justify;
+}
+
+@media screen and (max-width: 810px) {
+    .div-404 {
+        flex-direction: column-reverse;
+    }
+    .img-404 {
+        width: 100% !important;
+        margin: 0 !important;
+    }
+}
 
 /* .caption {
     background: #FAFAFA;
@@ -1100,7 +1144,7 @@ label {
     display: block;
     width: 40px;
     height: 40px;
-    /* vertical-align: middle; */
+    vertical-align: middle;
 margin: 0 1% 0 1%;
 background-size: cover;
 background-repeat: no-repeat;
