--- a/css/css.css
+++ b/css/css.css
@@ -766,6 +766,7 @@ li.pin {
     padding: 50px 12% !important;
     align-items: center;
     align-content: center;
+    font-size: inherit !important;
 }
 
 .img-404{
@@ -779,6 +780,7 @@ li.pin {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: inherit !important;
     
 }
 
