--- a/css/css.css
+++ b/css/css.css
@@ -665,6 +665,10 @@ li.pin {
     color: black;
 }
 
+.fa-twitter:hover {
+    color: #00acee;
+}
+
 #typeform-parent {
     display: none;
     padding-top: 0px;
